rust/psibase_macros/psibase-macros-derive/tests/authorized/invalid_trust_level.stderr
error: invalid trust level `Invalid` in `my_fn`: expected one of None, Low, Medium, High, Max
 --> tests/authorized/invalid_trust_level.rs:6:18
  |
6 |     #[authorized(Invalid)]
  |                  ^^^^^^^
