rust/psibase_macros/psibase-macros-derive/tests/authorized/invalid_trust_level.rs
use psibase_macros_derive::authorized;

struct MyPlugin;

impl MyPlugin {
    #[authorized(Invalid)]
    fn my_fn() {}
}

fn main() {}
